# myip

./: .gitignore  LICENSE  README.md
builtin/: .gitignore  CMakeLists.txt  README.md  builtin_myip.c  prereq.sh
cli/: CMakeLists.txt  cli.c
lib/: CMakeLists.txt  myexip.c  myexip.h  mylocalip.c  mylocalip.h  print_info.c  print_info.h
